--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - { target: linux-64, os: ubuntu-20.04 }
+          - { target: linux-64, os: ubuntu-latest }
           - { target: win-64, os: windows-latest }
-          - { target: osx-arm64, os: macos-14 }
+          - { target: osx-arm64, os: macos-latest }
       fail-fast: false
 
     name: ${{ matrix.target }}
