--- a/pixi.toml
+++ b/pixi.toml
@@ -8,3 +8,6 @@ platforms = ["osx-arm64", "linux-64", "win-64"]
 
 [dependencies]
 rattler-build = ">=0.45.0,<0.46"
+
+[tasks]
+build = "rattler-build build -c conda-forge --recipe-dir . --skip-existing=all"
